--- a/index.html
+++ b/index.html
@@ -1,37 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Expenses chart component</title>
 </head>
+
 <body>
+  <main>
 
-  My balance
-  $921.48
+    <div id="balance-component">
+      <div class="balance-header">
+        <p>My balance</p>
+        <h2>$921.48</h2>
+      </div>
 
-  Spending - Last 7 days
+      <div id="logo">
+        <img src="images/logo.svg" alt="logo">
+      </div>
+    </div>
 
-  mon
-  tue
-  wed
-  thu
-  fri
-  sat
-  sun
+    <div id="chart-component">
+      <div class="chart-header">
+        <h2>Spending - Last 7 days</h2>
+      </div>
 
-  Total this month
-  $478.33
 
-  +2.4%
-  from last month
-  
+      <div id="weekly-chart">
+
+        <div class="day mon">
+          <div class="bar"></div>
+          <p>mon</p>
+        </div>
+
+        <div class="day tues">
+          <div class="bar"></div>
+          <p>tue</p>
+        </div>
+
+        <div class="day wed">
+          <div class="bar"></div>
+          <p>wed</p>
+        </div>
+
+        <div class="day thur">
+          <div class="bar"></div>
+          <p>thu</p>
+        </div>
+
+        <div class="day fri">
+          <div class="bar"></div>
+          <p>fri</p>
+        </div>
+
+        <div class="day sat">
+          <div class="bar"></div>
+          <p>sat</p>
+        </div>
+
+        <div class="day sun">
+          <div class="bar"></div>
+          <p>sun</p>
+        </div>
+
+      </div>
+
+      <hr>
+
+      <div id="expense">
+        <div class="total">
+          <p>Total this month</p>
+          <h1>$478.33</h1>
+        </div>
+
+        <div class="increase-rate">
+          <h5>+2.4%</h5>
+          <p>from last month</p>
+        </div>
+      </div>
+    </div>
+
+  </main>
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
