Desktop layout done

--- a/index.html
+++ b/index.html
@@ -32,36 +32,58 @@
       <div id="weekly-chart">
 
         <div class="day mon">
+          <div class="tooltip">
+            <span class="tooltip-text"></span>
+          </div>
           <div class="bar"></div>
           <p>mon</p>
         </div>
 
         <div class="day tues">
+          <div class="tooltip">
+            <span class="tooltip-text">$324</span>
+          </div>
+          
           <div class="bar"></div>
           <p>tue</p>
         </div>
 
         <div class="day wed">
+          <div class="tooltip">
+            <span class="tooltip-text"></span>
+          </div>
           <div class="bar"></div>
           <p>wed</p>
         </div>
 
         <div class="day thur">
+          <div class="tooltip">
+            <span class="tooltip-text"></span>
+          </div>
           <div class="bar"></div>
           <p>thu</p>
         </div>
 
         <div class="day fri">
+          <div class="tooltip">
+            <span class="tooltip-text"></span>
+          </div>
           <div class="bar"></div>
           <p>fri</p>
         </div>
 
         <div class="day sat">
+          <div class="tooltip">
+            <span class="tooltip-text"></span>
+          </div>
           <div class="bar"></div>
           <p>sat</p>
         </div>
 
         <div class="day sun">
+          <div class="tooltip">
+            <span class="tooltip-text"></span>
+          </div>
           <div class="bar"></div>
           <p>sun</p>
         </div>
@@ -89,6 +111,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
