--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="tooltip">
             <span class="tooltip-text">$324</span>
           </div>
-          
+
           <div class="bar"></div>
           <p>tue</p>
         </div>
@@ -109,7 +109,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/Aayush895" target="_blank">Aayush Kumar Jha</a>.
   </div>
 
   <script src="script.js"></script>
